--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
+            "App\\": "src/app/",
+            "Domain\\": "src/domain/",
+            "Support\\": "src/support/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
